<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.shopping.app.ui.auth.signup.viewmodel.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="30dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:hint="@string/username"
                android:background="@drawable/bg_auth_text_field"
                android:layout_marginTop="30dp"
                android:autofillHints="username"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/bg_auth_text_field"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/bg_auth_text_field"
                android:layout_marginTop="10dp"
                android:autofillHints="password"/>

            <EditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:hint="@string/password_again"
                android:background="@drawable/bg_auth_text_field"
                android:layout_marginTop="10dp"
                android:autofillHints="password"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/signup"
                android:layout_marginTop="15dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_auth_button"
                android:onClick="@{() -> viewModel.onSignUpClicked(etUsername.getText().toString(), etEmail.getText().toString(), etPassword.getText().toString(), etPasswordAgain.getText().toString())}"/>

        </LinearLayout>

    </ScrollView>

</layout>